--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,8 +78,8 @@ h2 {
 
 textarea {
     font-size: 19px;
-    width: 700px;
-    border: 18px #C00 solid;
+    width: 100%;
+    border: 1px #C00 solid;
     margin: 0 0 20px 0;
 }
 
@@ -90,15 +90,13 @@ textarea {
 
 .content-3in1 {
     float: left;
-    padding: 30px;
-    padding-right: 0;
+    padding: 30px 0 30px 30px;
     width: 45%;
 }
 
 .content-full {
     float: left;
-    padding: 30px;
-    padding-right: 0;
+    padding: 30px 0 30px 30px;
     width: 100%;
 }
 
@@ -111,13 +109,13 @@ textarea {
 .redInput {
     font-size: 19px;
     width: 100%;
-    border: 18px #C00 solid;
+    border: 1px #C00 solid;
 }
 
 .grayInput {
     font-size: 19px;
     width: 100%;
-    border: 18px #666 solid;
+    border: 1px #666 solid;
 }
 
 .bigInput {
