--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,12 @@ h2 {
     height: 55px;
 }
 
+.siteFooter {
+    padding: 0 0 30px 0;
+    width: 100%;
+    float: left;
+}
+
 .siteNameButton {
     color: #fff;
     font-size: 26px;
@@ -80,7 +86,8 @@ textarea {
     font-size: 19px;
     width: 100%;
     border: 1px #C00 solid;
-    margin: 0 0 20px 0;
+    /*margin: 0 0 20px 0;*/
+    font-family: monospace;
 }
 
 .content {
@@ -96,7 +103,7 @@ textarea {
 
 .content-full {
     float: left;
-    padding: 30px 0 30px 30px;
+    padding: 30px 0 0 30px;
     width: 100%;
 }
 
@@ -110,6 +117,7 @@ textarea {
     font-size: 19px;
     width: 100%;
     border: 1px #C00 solid;
+    font-family: monospace;
 }
 
 .grayInput {
@@ -118,13 +126,8 @@ textarea {
     border: 1px #666 solid;
 }
 
-.bigInput {
-    width:700px;
-}
-
 .button {
-    font-size: 19px;
-    margin-right: 10px;
+    margin: 0.75em 0.75em 0.75em 0;
 }
 
 .resultDiv {
