--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,7 +115,7 @@ textarea {
 
 .content-full {
     float: left;
-    padding: 30px 0 0 30px;
+    padding: 30px 0 30px 30px;
     width: 100%;
 }
 
