--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,7 +70,7 @@ h2 {
 }
 
 .siteFooter {
-    padding: 0 0 30px 0;
+    padding: 30px 0 30px 0;
     width: 100%;
     float: left;
 }
@@ -109,13 +109,13 @@ textarea {
 
 .content-3in1 {
     float: left;
-    padding: 30px 0 30px 30px;
+    padding: 30px 0 0 30px;
     width: 45%;
 }
 
 .content-full {
     float: left;
-    padding: 30px 0 30px 30px;
+    padding: 30px 0 0 30px;
     width: 100%;
 }
 
