--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@
 
 body {
     font-family: Tahoma, Geneva, sans-serif;
-    font-size: 10px;
+    font-size: 14px;
     color: #056070;
     background-image: url(/images/fading_background_18.png);
     background-repeat: repeat-x;
@@ -60,7 +60,15 @@ h1 {
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 15px;
+}
+
+h3 {
+    font-size: 10px;
+}
+
+h4 {
+    font-size: 5px;
 }
 
 .siteHeader {
@@ -130,6 +138,7 @@ textarea {
     width: 100%;
     border: 1px #C00 solid;
     font-family: monospace;
+    margin: 0 0 0.75em 0;
 }
 
 .grayInput {
